--- a/elevator-pitch-generator/index.html
+++ b/elevator-pitch-generator/index.html
@@ -6,7 +6,8 @@
 
 You could make web presentations the easy way by creating a pdf's or powerpoint, or you could do a little more work to better understand these digital tools that you use everyday to (re)present yourself and connect with others in virtual spaces. And this last bit is an important point! If we really want to be makers, if we really want to be creative, then we need to understand our tools and how they work.
 
-In this file, you will work through the four questions of stasis: conjecture, definition, quality, and policy. This method is tried and true, 100% guaranteed to help you say something meaningful about almost anything. While the Greeks originally used it to help them explore questions and issues, and to try to figure out where others might disagree on those issues, the design can easily be adapted to other ends like this one. You should even commit this exercise of stasis to memory. That way, if you are ever stuck on an elevator with someone important...you'll be ready to have something to say. That was indeed the problem for Archimedes, the engineer who built the first elevator in 236BC and afterwards found himself riding in his elevator with all kinds of powerful people, ascending and descending with nothing to say. And for almost two hundred years, the the problem continued to plague the Greeks until the rhetorician Hermagoras solved this communication problem by developing the questions of stasis. Some say it was actually Aristotle, some hundred years pre-elevator, who first theorized the questions of stasis. And much later in the Roman period, Cicero, Quintillian, and Hermogenes added their own iterations.
+In this file, you will work through the four questions of stasis: conjecture, definition, quality, and 
+. This method is tried and true, 100% guaranteed to help you say something meaningful about almost anything. While the Greeks originally used it to help them explore questions and issues, and to try to figure out where others might disagree on those issues, the design can easily be adapted to other ends like this one. You should even commit this exercise of stasis to memory. That way, if you are ever stuck on an elevator with someone important...you'll be ready to have something to say. That was indeed the problem for Archimedes, the engineer who built the first elevator in 236BC and afterwards found himself riding in his elevator with all kinds of powerful people, ascending and descending with nothing to say. And for almost two hundred years, the the problem continued to plague the Greeks until the rhetorician Hermagoras solved this communication problem by developing the questions of stasis. Some say it was actually Aristotle, some hundred years pre-elevator, who first theorized the questions of stasis. And much later in the Roman period, Cicero, Quintillian, and Hermogenes added their own iterations.
 
 I like to think about stasis theory in terms of space. Some say the goal of this exercise is stasis, or agreement with the other, but I would argue that the goal of stasis is actually movement. Yes, when we come to stasis, we stop. But we stop only long enough in time/space to assess how we got where we are and what happened before moving forward. I argue that we actually use stasis theory to ready ourselves and others to move with changed velocity (in a new direction and perhaps at a different speed.)
 
@@ -156,8 +157,9 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
   <div class="textblock" style="text-align: left">
     <h2>Policy</h2>
 
-    <h3>Now we need to address the question of policy: moving forward, what's your plan? Why are you and your solution
-      right for the job? What can you/your product or service do specifically for the audience?</h3>
+    <h3>Our plan moving forward is to make our product accessible by making it into an official website.
+        Our manual is a great solution for this problem because people of varying technical backgrounds are able to
+        follow our manual and contribute to open source projects.</h3>
   </div>
 
 
