--- a/elevator-pitch-generator/index.html
+++ b/elevator-pitch-generator/index.html
@@ -19,7 +19,7 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 <!--Go ahead and change the title of this HTML document from "Elevator Pitch Generator" to whatever you want. This other stuff below the title does important work to help tell different browsers what this page should look like on different screens like cell phones or desktops-->
 
 <head>
-  <title>Elevator Pitch Generator</title>
+  <title>Open Source Manual</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -31,8 +31,8 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
   <div class="hero-image">
     <div class="hero-text">
-      <h1>Elevator Pitch Generator</h1>
-      <h6>Powered by Stasis Theory</h6>
+      <h1>Open Source Manual</h1>
+      <h6>Building a stronger open source, with open source</h6>
     </div>
   </div>
 
@@ -41,8 +41,8 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
   <div class="textblock" style="text-align: left">
     <h2>Conjecture</h2>
-    <h3>Answer the questions of conjecture: What is the problem and how will your product/service/etc. solve it? Make an
-      assertive statement that resonates with your audience.</h3>
+    <h3>Contributing to or managing an open source project often appears to be a daunting task. There are unspoken rules that make it hard for newcomers to start contributing, and there are pitfalls that can endanger open source projects.</h3>
+    <h3>This can be solved by documenting these unspoken rules and building a consensus as to how open source should be conducted. With all of the information in one place, it should be easy for a newcomer to get up to speed on all they need to know to start contributing in open source.</h3>
   </div>
 
   <!--Add more photos to your project folder for a photo grid, making sure the files end in .jpg or .png and replace/add to the names on the grid below on this html file. You can add more images if you wish, or subtract...see what happens--you have to be playful to find out how things work.-->
@@ -140,8 +140,8 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
   <div class="textblock" style="text-align: left">
     <h2>Quality</h2>
-    <h3>We are at the question of quality: why is solving this problem important? Who are the stakeholders? What happens
-      if we don't do anything? What are the costs of solving/not solving the problem/issue?</h3>
+    <h3>Open source is a powerful idea that enables increased freedom, transparency, and equality. It is therefore everyone's responsibility, especially those in tech, to understand how open source works, how to contribute to it, and how to manage it yourself.</h3>
+    <h3>The benefits of open source are undermined if there is not an easy and accessible way for individuals to learn about it. This can lead to unequal representation in open source, as is often seen in tech in general.</h3>
   </div>
 
 
