--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1.27.0/components/prism-bash.js"></script>
 </body>
 </html>
