--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
+      name: 'Guide to Open Source',
+      repo: 'https://github.com/Richie78321/engcmp-manual-project'
     }
   </script>
   <!-- Docsify v4 -->
