Update elevator pitch to present tense

--- a/elevator-pitch-generator/index.html
+++ b/elevator-pitch-generator/index.html
@@ -43,7 +43,7 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
   <div class="textblock" style="text-align: left">
     <h2>Conjecture</h2>
     <h3>Contributing to or managing an open source project often appears to be a daunting task. There are unspoken rules that make it hard for newcomers to start contributing, and there are pitfalls that can endanger open source projects.</h3>
-    <h3>This can be solved by documenting these unspoken rules and building a consensus as to how open source should be conducted. With all of the information in one place, it should be easy for a newcomer to get up to speed on all they need to know to start contributing in open source.</h3>
+    <h3>This was solved by documenting these unspoken rules and building a consensus as to how open source should be conducted. With all of the information in one place, it will be easy for a newcomer to get up to speed on all they need to know to start contributing to open source.</h3>
   </div>
 
   <!--Add more photos to your project folder for a photo grid, making sure the files end in .jpg or .png and replace/add to the names on the grid below on this html file. You can add more images if you wish, or subtract...see what happens--you have to be playful to find out how things work.-->
@@ -157,9 +157,8 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
   <div class="textblock" style="text-align: left">
     <h2>Policy</h2>
 
-    <h3>Our plan moving forward is to make our product accessible by making it into an official website.
-        Our manual is a great solution for this problem because people of varying technical backgrounds are able to
-        follow our manual and contribute to open source projects.</h3>
+    <h3>We made our product accessible by making it into an official website with a simple UI.
+        People of varying technical backgrounds are able to follow our manual and use the information to contribute to open source projects.</h3>
   </div>
 
 
