--- a/elevator-pitch-generator/index.html
+++ b/elevator-pitch-generator/index.html
@@ -74,16 +74,15 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
     <h3>
       <dl>
         <dt> <span style="color: #1341d7"><strong>FOSS: </strong></span></dt>
-        <dd> Free and Open Source Software is Software that
-          is released under license and
-          copyright by the owner that allows people to modify, use and distribute the source code. This is different
-          from proprietary software as it is free and the source code can be edited by the user. Many times the users
-          contribute to the software by fixing bugs, implementing new features and testing the software for the owner.
+        <dd> Stands for Free and Open Source Software. It is free software that the owner has granted the users the
+          ability to use, copy, study and change the software in any way under licnese. It is shared openly so that
+          voluntarily contributung is encouraged.
         </dd>
         <br>
         <dt><span style="color: #1341d7"><strong>Git and GitHub: </strong></span></dt>
-        <dd> Git is a simple program to track the
-          changes made in a project's code files. Github is a website that hosts repositories of code.
+        <dd> Git is a simple version control program to track the
+          changes made in a project's code files. Github is a website that hosts repositories of code. A repository is a
+          central location in which data and stored and managed.
 
           </br></br>Within Git and GitHub there are other terms you should know:
           <dl>
@@ -101,7 +100,7 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
             <br>
             <dt><span style="color: #940000"><strong>Pull Requests: </strong></span></dt>
             <dd>Users that fork a repository can submit the changes to the main repository. The main developer can then
-              decide whether or not to incorporate the changes into the main repository. This is how most people
+              decide whether or not to incorporate the changes into the main repository. This is how people
               contribute to FOSS.</dd><br>
             <dt><span style="color: #940000"><strong>ReadMes and Licenses: </strong></span></dt>
             <dd>ReadMe and Licenses outline the rules of using software. Many ReadMes have an overview of the software,
