updated definition section

--- a/elevator-pitch-generator/index.html
+++ b/elevator-pitch-generator/index.html
@@ -72,59 +72,8 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
     <h2>Definition</h2>
 
     <h3>
-      <dl>
-        <dt> <span style="color: #1341d7"><strong>FOSS: </strong></span></dt>
-        <dd> Stands for Free and Open Source Software. It is free software that the owner has granted the users the
-          ability to use, copy, study and change the software in any way under licnese. It is shared openly so that
-          voluntarily contributung is encouraged.
-        </dd>
-        <br>
-        <dt><span style="color: #1341d7"><strong>Git and GitHub: </strong></span></dt>
-        <dd> Git is a simple version control program to track the
-          changes made in a project's code files. Github is a website that hosts repositories of code. A repository is a
-          central location in which data and stored and managed.
-
-          </br></br>Within Git and GitHub there are other terms you should know:
-          <dl>
-            <dt>
-              <span style="color: #940000"><strong>Branch Workflow: </strong></span>
-            </dt>
-            <dd>
-              The developer can branch their code to create a new version without editing their main files. This makes
-              it so that you can make experimental versions of code without potentially destroying your working
-              versions.
-            </dd><br>
-            <dt><span style="color: #940000"><strong>Forking: </strong></span></dt>
-            <dd>Forking allows users to create a copy of a repository and change the code however they see fit. This
-              allows them to make their own version to test and use the code.</dd>
-            <br>
-            <dt><span style="color: #940000"><strong>Pull Requests: </strong></span></dt>
-            <dd>Users that fork a repository can submit the changes to the main repository. The main developer can then
-              decide whether or not to incorporate the changes into the main repository. This is how people
-              contribute to FOSS.</dd><br>
-            <dt><span style="color: #940000"><strong>ReadMes and Licenses: </strong></span></dt>
-            <dd>ReadMe and Licenses outline the rules of using software. Many ReadMes have an overview of the software,
-              a tutorial on how to install and run it and how to contribute to it if applicable. For larger projects,
-              they will have a code of conduct as well. Licenses are the legal copyright of the code. They outline
-              whether or not the code can be redistributed under a new license or sold.</dd>
-            <br>
-          </dl>
-        </dd>
-
-        <dt> <span style="color: #1341d7"><strong>Contributers File: </strong></span></dt>
-        <dd>This file lists the people that
-          have contributed to the project and
-          their role. </dd> <br>
-        <dt>
-          <span style="color: #1341d7"><strong>CI/CD: </strong></span>
-        </dt>
-        <dd>Continuous Integration involves building, testing
-          and integrating code into a
-          shared repository for the project. Continuous Delivery automatically deploys code to the working, current,
-          version of your project. This allows you to reduce your manual workflow.
-        </dd>
-
-      </dl>
+We made a manual for contributing to and maintaining open-source software. We made it using markdown (programming language) and a software that makes a website using the file called Docsify. Our group roles were content developers and project developers. We all also did some UI/UX development. We organized our contributions by section. So one of did the Introduction, then the "How to Contribute" and finally, the "How to Maintain" section. For further development, we had an MIT license that would allow anyone to contribute or reuse our manual.
+   
     </h3>
   </div>
 
