updated policy section

--- a/elevator-pitch-generator/index.html
+++ b/elevator-pitch-generator/index.html
@@ -105,8 +105,7 @@ We made a manual for contributing to and maintaining open-source software. We ma
   <div class="textblock" style="text-align: left">
     <h2>Policy</h2>
 
-    <h3>We made our product accessible by making it into an official website with a simple UI.
-        People of varying technical backgrounds are able to follow our manual and use the information to contribute to open source projects.</h3>
+    <h3>We accomplished our original goals by making the website into a simply UI. However, there is always room for improvement with projects. Depending on user feedback, we will make changes accordingly to make our manual even better. Another plan we have is to spread awareness about our manual through various social media sites so people know there is a great resource available on how to contribute to free open source projects.</h3>
   </div>
 
 
